--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -152,9 +152,10 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
    using VertexFiBarFS     = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
-   const auto mj = context.mass<Fj>(indices_in);
+   #include "/Users/Navir/masses.txt"
+   const auto mj = mFe[indices_in[0]];
    const auto mj2 = mj*mj;
-   const auto mi = context.mass<Fi>(indices_out);
+   const auto mi = mFe[indices_out[0]];
    const auto mi2 = mi*mi;
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
@@ -189,9 +190,9 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto FjBarFjVBarL = FjBarFjVBar.left();
          const auto FjBarFjVBarR = FjBarFjVBar.right();
 
-         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF * mF;
-         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -203,16 +204,14 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFS.right();
          
          const std::complex<double> A1L = 
-         (FjBarFjVBarL*(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2) - FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) - 
-       ((FiBarFSR*mF + FiBarFSL*mi)*(FBarFjSBarL*mF + FBarFjSBarR*mj) - FBarFjSBarL*FiBarFSR*mS2)*
-        B0i(bb0,mi2,mS2,mF2) + mi*(FBarFjSBarL*FiBarFSR*mi - FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mi2,mS2,mF2)))/
-   (16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+         (FjBarFjVBarL*(-(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mi2,mF2,mS2)) + 
+       mi*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mi2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
+         // (FjBarFjVBarL*(-(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,0.*mi2,mF2,mS2)) + 
+      //  mi*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,0.*mi2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
 
          const std::complex<double> A1R = 
-         (FjBarFjVBarR*(FBarFjSBarR*FiBarFSL*A0i(aa0,mF2) - FBarFjSBarR*FiBarFSL*A0i(aa0,mS2) - 
-       ((FiBarFSL*mF + FiBarFSR*mi)*(FBarFjSBarR*mF + FBarFjSBarL*mj) - FBarFjSBarR*FiBarFSL*mS2)*
-        B0i(bb0,mi2,mS2,mF2) + mi*(FBarFjSBarR*FiBarFSL*mi - FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mi2,mS2,mF2)))/
-   (16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+         (FjBarFjVBarR*(-(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*B0i(bb0,mi2,mF2,mS2)) + 
+       mi*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mi2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
          
          res += std::valarray<std::complex<double>> {A1L, A1R};
       }
@@ -229,13 +228,14 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFiBarFiVBar = Vertex<typename Fi::lorentz_conjugate, Fi, typename V::lorentz_conjugate>;
-   using VertexFBarFjSBar     = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFiBarFS  = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFjSBar  = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS     = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
-   const auto mj = context.mass<Fj>(indices_in);
+   #include "/Users/Navir/masses.txt"
+   const auto mj = mFe[indices_in[0]];
    const auto mj2 = mj*mj;
-   const auto mi = context.mass<Fi>(indices_out);
+   const auto mi = mFe[indices_out[0]];
    const auto mi2 = mi*mi;
 
    std::valarray<std::complex<double>> res {0.0, 0.0};
@@ -269,9 +269,9 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFiVBarL = FiBarFiVBar.left();
          const auto FiBarFiVBarR = FiBarFiVBar.right();
 
-         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF * mF;
-         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -282,17 +282,22 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFSL = FiBarFS.left();
          const auto FiBarFSR = FiBarFS.right();
          
-         const std::complex<double> A1L = 
-         (FiBarFiVBarL*(-(FBarFjSBarL*FiBarFSR*A0i(aa0,mF2)) + FBarFjSBarL*FiBarFSR*A0i(aa0,mS2) + 
-       ((FiBarFSR*mF + FiBarFSL*mi)*(FBarFjSBarL*mF + FBarFjSBarR*mj) - FBarFjSBarL*FiBarFSR*mS2)*
-        B0i(bb0,mj2,mS2,mF2) + mj*(FBarFjSBarR*FiBarFSL*mi - FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mS2,mF2)))/
-   (16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+         // std::cout << mF << ' ' << mS << ' ' << mj << ' ' << mi << ' ' << B0i(bb0,mj2,mF2,mS2) << ' ' << B0i(bb1,mj2,mF2,mS2) << ' '
+         // << FiBarFiVBarL
+         // << '\n';
+         // std::cout << FBarFjSBarL << ' ' << FBarFjSBarR << ' ' << FiBarFSL << ' ' << FiBarFSR << '\n';
+         const std::complex<double> A1L =
+         (FiBarFiVBarL*(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mj2,mF2,mS2) - 
+       mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
+         // (
+            // FiBarFiVBarL*mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,0*mj2,mF2,mS2) 
+      //  )/(16.*Power(Pi,2)); 
+         // (FiBarFiVBarL*(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mj2,mF2,mS2) - 
+      //  mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mF2,mS2)*0.))/(16.*(mi2 - mj2)*Power(Pi,2)); 
 
          const std::complex<double> A1R = 
-         (FiBarFiVBarR*(-(FBarFjSBarR*FiBarFSL*A0i(aa0,mF2)) + FBarFjSBarR*FiBarFSL*A0i(aa0,mS2) + 
-       ((FiBarFSL*mF + FiBarFSR*mi)*(FBarFjSBarR*mF + FBarFjSBarL*mj) - FBarFjSBarR*FiBarFSL*mS2)*
-        B0i(bb0,mj2,mS2,mF2) + mj*(FBarFjSBarL*FiBarFSR*mi - FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mj2,mS2,mF2)))/
-   (16.*(mi - mj)*(mi + mj)*Power(Pi,2));
+         (FiBarFiVBarR*(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*B0i(bb0,mj2,mF2,mS2) - 
+       mj*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mj2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
 
          res += std::valarray<std::complex<double>> {A1L, A1R};
       }
@@ -359,6 +364,7 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
 
    auto spectator_indices = default_indices_for_spectator<V>();
 
+   #include "/Users/Navir/masses.txt"
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
@@ -387,11 +393,11 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FBarFVBarL = FBarFVBar.left();
          const auto FBarFVBarR = FBarFVBar.right();
 
-         const auto mFB = context.mass<F>(fermionFieldIndicesIn);
+         const auto mFB = mChi[fermionFieldIndicesIn[0]];
          const auto mFB2 = mFB*mFB;
-         const auto mFA = context.mass<F>(fermionFieldIndicesOut);
+         const auto mFA = mChi[fermionFieldIndicesOut[0]];
          const auto mFA2 = mFA*mFA;
-         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -403,23 +409,9 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
-         -(-(FBarFjSBarL*FBarFVBarR*FiBarFSR*B0i(bb0,0,mFA2,mFB2)) + 
-      (FBarFVBarL*(FiBarFSR*mFA + FiBarFSL*mi)*(FBarFjSBarL*mFB + FBarFjSBarR*mj) - 
-         FBarFjSBarL*FBarFVBarR*FiBarFSR*mS2)*C0i(cc0,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarL*FBarFVBarR*FiBarFSR*C0i(cc00,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarL*FiBarFSL*mFB*mi*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSR*mFA*mj*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi2*C0i(cc11,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc11,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi2*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSR*mj2*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarL*FiBarFSL*mFB*mi*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSR*mFA*mj*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      mj*(FBarFjSBarR*FBarFVBarL*FiBarFSL*mi + FBarFjSBarL*FBarFVBarR*FiBarFSR*mj)*
-       C0i(cc22,mi2,0,mj2,mS2,mFA2,mFB2))/(16.*Power(Pi,2));
+         (FBarFjSBarL*FiBarFSR*(FBarFVBarR*B0i(bb0,0,mFB2,mFA2) + 
+       (-(FBarFVBarL*mFA*mFB) + FBarFVBarR*mS2)*MyC0(mFB,mFA,mS) - 
+       2*FBarFVBarR*MyC00(mFB,mFA,mS)))/(16.*Power(Pi,2));
 
         const std::complex<double> A1R = 
         -(-(FBarFjSBarR*FBarFVBarL*FiBarFSL*B0i(bb0,0,mFA2,mFB2)) + 
@@ -465,6 +457,7 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
    const auto mi = context.mass<Fi>(indices_out);
    const auto mi2 = mi*mi;
 
+   #include "/Users/Navir/masses.txt"
    std::valarray<std::complex<double>> res {0.0, 0.0};
    // loop over all possible particle "generations" attached to both vertices
    for (const auto& indexIn: index_range<VertexFBarFjSBar>()) {
@@ -493,11 +486,11 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(0,1);
          // const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(positive momentum index, negative momentum index);
 
-         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF*mF;
-         const auto mSB = context.mass<S>(scalarFieldIndicesIn);
+         const auto mSB = mSe[scalarFieldIndicesIn[0]];
          const auto mSB2 = mSB*mSB;
-         const auto mSA = context.mass<S>(scalarFieldIndicesOut);
+         const auto mSA = mSe[scalarFieldIndicesOut[0]];
          const auto mSA2 = mSA * mSA;
 
          const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -509,19 +502,25 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
-         (SBarSVBar*(2*FBarFjSBarL*FiBarFSR*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       FBarFjSBarL*FiBarFSR*(-mi2 + mj2)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       (FBarFjSBarL*FiBarFSL*mF*mi + FBarFjSBarR*FiBarFSR*mF*mj + FBarFjSBarR*FiBarFSL*mi*mj + 
-          FBarFjSBarL*FiBarFSR*mj2)*C0i(cc2,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)))/
-   (16.*Power(Pi,2));
+         -(FBarFjSBarL*FiBarFSR*SBarSVBar*MyC00(mF,mSA,mSB))/(8.*Power(Pi,2));
 
          const std::complex<double> A1R = 
-         (SBarSVBar*(2*FBarFjSBarR*FiBarFSL*C0i(cc00,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       FBarFjSBarR*FiBarFSL*(-mi2 + mj2)*C0i(cc12,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       (FBarFjSBarR*FiBarFSR*mF*mi + FBarFjSBarL*FiBarFSL*mF*mj + FBarFjSBarL*FiBarFSR*mi*mj + 
-          FBarFjSBarR*FiBarFSL*mj2)*C0i(cc2,0,mi2,mj2,mSB2,mSA2,mF2) + 
-       mj*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*C0i(cc22,0,mi2,mj2,mSB2,mSA2,mF2)))/
+         (SBarSVBar*(-(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*C0i(cc0,mi2,0,mj2,mF2,mSA2,mSB2)) + 
+       2*FBarFjSBarR*FiBarFSL*C0i(cc00,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       2*FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSL*mj2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSL*mj2*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       mj*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2)))/
    (16.*Power(Pi,2));
          
          res += std::valarray<std::complex<double>> {A1L, A1R};
