--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -190,9 +190,11 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const auto FjBarFjVBarL = FjBarFjVBar.left();
          const auto FjBarFjVBarR = FjBarFjVBar.right();
 
-         const auto mF = mChi[fermionFieldIndicesIn[0]];
+         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         // const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF * mF;
-         const auto mS = mSe[scalarFieldIndicesIn[0]];
+         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         // const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -206,8 +208,6 @@ std::valarray<std::complex<double>> FFVEmitterFj<Fj, Fi, V, F, S>::value(
          const std::complex<double> A1L = 
          (FjBarFjVBarL*(-(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mi2,mF2,mS2)) + 
        mi*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,mi2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
-         // (FjBarFjVBarL*(-(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,0.*mi2,mF2,mS2)) + 
-      //  mi*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*B0i(bb1,0.*mi2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
 
          const std::complex<double> A1R = 
          (FjBarFjVBarR*(-(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*B0i(bb0,mi2,mF2,mS2)) + 
@@ -269,9 +269,11 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFiVBarL = FiBarFiVBar.left();
          const auto FiBarFiVBarR = FiBarFiVBar.right();
 
-         const auto mF = mChi[fermionFieldIndicesIn[0]];
+         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         // const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF * mF;
-         const auto mS = mSe[scalarFieldIndicesIn[0]];
+         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         // const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -282,18 +284,9 @@ std::valarray<std::complex<double>> FFVEmitterFi<Fj, Fi, V, F, S>::value(
          const auto FiBarFSL = FiBarFS.left();
          const auto FiBarFSR = FiBarFS.right();
          
-         // std::cout << mF << ' ' << mS << ' ' << mj << ' ' << mi << ' ' << B0i(bb0,mj2,mF2,mS2) << ' ' << B0i(bb1,mj2,mF2,mS2) << ' '
-         // << FiBarFiVBarL
-         // << '\n';
-         // std::cout << FBarFjSBarL << ' ' << FBarFjSBarR << ' ' << FiBarFSL << ' ' << FiBarFSR << '\n';
          const std::complex<double> A1L =
          (FiBarFiVBarL*(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mj2,mF2,mS2) - 
        mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mF2,mS2)))/(16.*(mi2 - mj2)*Power(Pi,2));
-         // (
-            // FiBarFiVBarL*mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,0*mj2,mF2,mS2) 
-      //  )/(16.*Power(Pi,2)); 
-         // (FiBarFiVBarL*(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*B0i(bb0,mj2,mF2,mS2) - 
-      //  mj*(FBarFjSBarR*FiBarFSL*mi + FBarFjSBarL*FiBarFSR*mj)*B0i(bb1,mj2,mF2,mS2)*0.))/(16.*(mi2 - mj2)*Power(Pi,2)); 
 
          const std::complex<double> A1R = 
          (FiBarFiVBarR*(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*B0i(bb0,mj2,mF2,mS2) - 
@@ -353,8 +346,8 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
       EvaluationContext& context) {
 
    using VertexFBarFVBar  = Vertex<typename F::lorentz_conjugate, F, typename V::lorentz_conjugate>;
-   using VertexFBarFjSBar    = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
-   using VertexFiBarFS = Vertex<typename Fi::lorentz_conjugate, F, S>;
+   using VertexFBarFjSBar = Vertex<typename F::lorentz_conjugate, Fj, typename S::lorentz_conjugate>;
+   using VertexFiBarFS    = Vertex<typename Fi::lorentz_conjugate, F, S>;
 
    // masses of external fermions
    const auto mj = context.mass<Fj>(indices_in);
@@ -393,11 +386,14 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FBarFVBarL = FBarFVBar.left();
          const auto FBarFVBarR = FBarFVBar.right();
 
-         const auto mFB = mChi[fermionFieldIndicesIn[0]];
+         const auto mFB = context.mass<F>(fermionFieldIndicesIn);
+         // const auto mFB = mChi[fermionFieldIndicesIn[0]];
          const auto mFB2 = mFB*mFB;
-         const auto mFA = mChi[fermionFieldIndicesOut[0]];
+         const auto mFA = context.mass<F>(fermionFieldIndicesOut);
+         // const auto mFA = mChi[fermionFieldIndicesOut[0]];
          const auto mFA2 = mFA*mFA;
-         const auto mS = mSe[scalarFieldIndicesIn[0]];
+         const auto mS = context.mass<S>(scalarFieldIndicesIn);
+         // const auto mS = mSe[scalarFieldIndicesIn[0]];
          const auto mS2 = mS*mS;
 
          const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -409,28 +405,32 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
-         (FBarFjSBarL*FiBarFSR*(FBarFVBarR*B0i(bb0,0,mFB2,mFA2) + 
-       (-(FBarFVBarL*mFA*mFB) + FBarFVBarR*mS2)*MyC0(mFB,mFA,mS) - 
-       2*FBarFVBarR*MyC00(mFB,mFA,mS)))/(16.*Power(Pi,2));
+         -(-(FBarFjSBarL*FBarFVBarR*FiBarFSR*B0i(bb0,0,mFB2,mFA2)) + 
+      FBarFjSBarL*FiBarFSR*(FBarFVBarL*mFA*mFB + FBarFVBarR*mj2 - FBarFVBarR*mS2)*
+       C0i(cc0,0,mi2,mj2,mFB2,mFA2,mS2) + 2*FBarFjSBarL*FBarFVBarR*FiBarFSR*C0i(cc00,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi2*C0i(cc1,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mj2*C0i(cc1,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi2*C0i(cc12,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mj2*C0i(cc12,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarL*FBarFVBarL*FiBarFSL*mFB*mi*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarR*FBarFVBarL*FiBarFSR*mFA*mj*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      2*FBarFjSBarL*FBarFVBarR*FiBarFSR*mj2*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi*mj*C0i(cc22,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mj2*C0i(cc22,0,mi2,mj2,mFB2,mFA2,mS2))/(16.*Power(Pi,2));
 
         const std::complex<double> A1R = 
-        -(-(FBarFjSBarR*FBarFVBarL*FiBarFSL*B0i(bb0,0,mFA2,mFB2)) + 
-      (FBarFVBarR*(FiBarFSL*mFA + FiBarFSR*mi)*(FBarFjSBarR*mFB + FBarFjSBarL*mj) - 
-         FBarFjSBarR*FBarFVBarL*FiBarFSL*mS2)*C0i(cc0,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarR*FBarFVBarL*FiBarFSL*C0i(cc00,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarR*FiBarFSR*mFB*mi*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSL*mFA*mj*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc1,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi2*C0i(cc11,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc11,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi2*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarL*FiBarFSL*mj2*C0i(cc12,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarR*FBarFVBarR*FiBarFSR*mFB*mi*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      FBarFjSBarL*FBarFVBarR*FiBarFSL*mFA*mj*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      2*FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc2,mi2,0,mj2,mS2,mFA2,mFB2) + 
-      mj*(FBarFjSBarL*FBarFVBarR*FiBarFSR*mi + FBarFjSBarR*FBarFVBarL*FiBarFSL*mj)*
-       C0i(cc22,mi2,0,mj2,mS2,mFA2,mFB2))/(16.*Power(Pi,2));
+        -(-(FBarFjSBarR*FBarFVBarL*FiBarFSL*B0i(bb0,0,mFB2,mFA2)) + 
+      FBarFjSBarR*FiBarFSL*(FBarFVBarR*mFA*mFB + FBarFVBarL*mj2 - FBarFVBarL*mS2)*
+       C0i(cc0,0,mi2,mj2,mFB2,mFA2,mS2) + 2*FBarFjSBarR*FBarFVBarL*FiBarFSL*C0i(cc00,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi2*C0i(cc1,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mj2*C0i(cc1,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mi2*C0i(cc12,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mj2*C0i(cc12,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarR*FBarFVBarR*FiBarFSR*mFB*mi*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) - 
+      FBarFjSBarL*FBarFVBarR*FiBarFSL*mFA*mj*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      2*FBarFjSBarR*FBarFVBarL*FiBarFSL*mj2*C0i(cc2,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarL*FBarFVBarR*FiBarFSR*mi*mj*C0i(cc22,0,mi2,mj2,mFB2,mFA2,mS2) + 
+      FBarFjSBarR*FBarFVBarL*FiBarFSL*mj2*C0i(cc22,0,mi2,mj2,mFB2,mFA2,mS2))/(16.*Power(Pi,2));
 
          res += std::valarray<std::complex<double>> {A1L, A1R};
       }
@@ -484,13 +484,15 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          );
          // not clear what the sign
          const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(0,1);
-         // const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(positive momentum index, negative momentum index);
 
-         const auto mF = mChi[fermionFieldIndicesIn[0]];
+         const auto mF = context.mass<F>(fermionFieldIndicesIn);
+         // const auto mF = mChi[fermionFieldIndicesIn[0]];
          const auto mF2 = mF*mF;
-         const auto mSB = mSe[scalarFieldIndicesIn[0]];
+         const auto mSB = context.mass<S>(scalarFieldIndicesIn);
+         // const auto mSB = mSe[scalarFieldIndicesIn[0]];
          const auto mSB2 = mSB*mSB;
-         const auto mSA = mSe[scalarFieldIndicesOut[0]];
+         const auto mSA = context.mass<S>(scalarFieldIndicesOut);
+         // const auto mSA = mSe[scalarFieldIndicesOut[0]];
          const auto mSA2 = mSA * mSA;
 
          const auto FBarFjSBar  = VertexFBarFjSBar::evaluate(indexIn, context);
@@ -502,26 +504,43 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto FiBarFSR = FiBarFS.right();
 
          const std::complex<double> A1L = 
-         -(FBarFjSBarL*FiBarFSR*SBarSVBar*MyC00(mF,mSA,mSB))/(8.*Power(Pi,2));
+         // -(FBarFjSBarL*FiBarFSR*SBarSVBar*MyC00(mF,mSA,mSB))/(8.*Power(Pi,2));
+(SBarSVBar*(mF*(FBarFjSBarL*FiBarFSL*mi + FBarFjSBarR*FiBarFSR*mj)*C0i(cc0,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       2*FBarFjSBarL*FiBarFSR*C0i(cc00,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSL*mF*mi*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi2*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSR*mF*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi2*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi*mj*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       2*FBarFjSBarR*FiBarFSL*mi*mj*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mj2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSL*mF*mi*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSR*mF*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mj2*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi*mj*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mj2*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2)))/(16.*Power(Pi,2));
 
          const std::complex<double> A1R = 
-         (SBarSVBar*(-(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*C0i(cc0,mi2,0,mj2,mF2,mSA2,mSB2)) + 
-       2*FBarFjSBarR*FiBarFSL*C0i(cc00,mi2,0,mj2,mF2,mSA2,mSB2) - 
-       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarR*FiBarFSL*mi2*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
-       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarR*FiBarFSL*mi2*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarR*FiBarFSL*mi2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       2*FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarR*FiBarFSL*mj2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
-       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
-       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       FBarFjSBarR*FiBarFSL*mj2*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
-       mj*(FBarFjSBarL*FiBarFSR*mi + FBarFjSBarR*FiBarFSL*mj)*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2)))/
-   (16.*Power(Pi,2));
+         (SBarSVBar*(mF*(FBarFjSBarR*FiBarFSR*mi + FBarFjSBarL*FiBarFSL*mj)*C0i(cc0,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       2*FBarFjSBarR*FiBarFSL*C0i(cc00,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc1,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc11,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mi2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       2*FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mj2*C0i(cc12,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarR*FiBarFSR*mF*mi*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) + 
+       FBarFjSBarL*FiBarFSL*mF*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mj2*C0i(cc2,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarL*FiBarFSR*mi*mj*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2) - 
+       FBarFjSBarR*FiBarFSL*mj2*C0i(cc22,mi2,0,mj2,mF2,mSA2,mSB2)))/(16.*Power(Pi,2));
          
          res += std::valarray<std::complex<double>> {A1L, A1R};
       }
